viz: Fix tracking undrawn surfaces.

Each Surface is currently already explicitly notified by the
SurfaceAggregator when it is drawn, or when its copy-requests start to
be processed. It is not necessary to separately track the undrawn
surfaces from SurfaceAggregator. So use that information to decide
whether a Surface is drawn or not.

BUG=921474

Change-Id: I45aa1d1ccce1d5c5394d3f07bd887cf5426f04fc
Reviewed-on: https://chromium-review.googlesource.com/c/1443545
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#627545}
Former-commit-id: 4fdfe88c693f52a717efa94ca0e721fb2e9ffaf3